--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,17 +17,21 @@ crate-type = ["lib"]
 [dependencies]
 actix-web = { version = "4.9.0" }
 actix-files = { version = "0.6.6" }
-futures-util = "0.3.30"
-serde = { version = "1.0.208", features = ["derive"] }
+serde = { version = "1.0.219" }
 serde_json = { version = "1.0.125" }
+serde_hash = { version = "0.1.3" }
 pretty_env_logger = "0.5.0"
 include_dir = "0.7.4"
 walkdir = "2.5.0"
-awc = "3.1.0"
 log = "0.4.22"
 anyhow = "1.0.95"
 thiserror = "2.0.11"
 vite-actix = "0.2.5"
+sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive", "runtime-tokio", "chrono"] }
+chrono = {version = "0.4.41", features = ["now", "serde"]}
+# Mardens Inc. Libraries
+database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }
+actix-authentication-middleware = { git = "https://github.com/Mardens-Inc/actix-authentication-middleware.git" }
 
 
 [build-dependencies]
