--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "repository": "",
   "type": "module",
   "scripts": {
-    "build-api": "cargo build --release",
+    "build-api": "wsl bash -ic \"cargo build --release\"",
     "run-api": "cargo run --bin store_orders",
     "dev": "vite",
     "build-frontend": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "watch": "cargo watch -x \"run --bin store_orders\" -C dist -N --why -w ../src-actix/",
-    "build": "npm run \"build-frontend\" && npm run \"build-api\""
+    "build": "npm run \"build-frontend\" && npm run \"build-api\"",
+    "publish": "pwp -H 192.168.21.209 -u administrator -a C:\\Users\\drew.chase\\.ssh\\mss-sshkey_ossh.key -s storeorders --binary store_orders -BIStc \"npm run build\""
   },
   "dependencies": {
     "@heroui/react": "2.7.11",
