--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,9 +30,15 @@ vite-actix = "0.2.5"
 sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive", "runtime-tokio", "chrono"] }
 chrono = {version = "0.4.41", features = ["now", "serde"]}
 rand = "0.8.5"
+# JWT and authentication dependencies
+jsonwebtoken = "9.3.0"
+bcrypt = "0.15.1"
+actix-web-httpauth = "0.8.2"
 # Mardens Inc. Libraries
 database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }
 actix-authentication-middleware = { git = "https://github.com/Mardens-Inc/actix-authentication-middleware.git" }
+tokio = "1.46.0"
+uuid = { version = "1.17.0", features = ["v4"] }
 
 
 [build-dependencies]
