--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "12.19.2",
     "jquery": "3.7.1",
     "react": "18.2.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
     "react-router-dom": "7.1.3"
   },
