--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ crate-type = ["lib"]
 [dependencies]
 actix-web = { version = "4.9.0" }
 actix-files = { version = "0.6.6" }
-serde = { version = "1.0.219" }
+serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
 serde_json = { version = "1.0.125" }
 serde_hash = { version = "0.1.3" }
 pretty_env_logger = "0.5.0"
@@ -27,16 +27,16 @@ log = "0.4.22"
 anyhow = "1.0.95"
 thiserror = "2.0.11"
 vite-actix = "0.2.5"
-sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive", "runtime-tokio", "chrono"] }
-chrono = {version = "0.4.41", features = ["now", "serde"]}
-rand = "0.8.5"
+sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive", "runtime-tokio", "chrono", "rust_decimal"] }
+chrono = { version = "0.4.41", features = ["now", "serde"] }
+rand = "0.9.2"
+rust_decimal = { version = "1.36.0", features = ["serde"] }
 # JWT and authentication dependencies
 jsonwebtoken = "9.3.0"
-bcrypt = "0.15.1"
+bcrypt = "0.17.0"
 actix-web-httpauth = "0.8.2"
 # Mardens Inc. Libraries
 database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }
-actix-authentication-middleware = { git = "https://github.com/Mardens-Inc/actix-authentication-middleware.git" }
 tokio = "1.46.0"
 uuid = { version = "1.17.0", features = ["v4"] }
 
