--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ walkdir = "2.5.0"
 log = "0.4.22"
 anyhow = "1.0.95"
 thiserror = "2.0.11"
-vite-actix = "0.2.5"
+vite-actix = {version = "0.2.6"}
 sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive", "runtime-tokio", "chrono", "rust_decimal"] }
 chrono = { version = "0.4.41", features = ["now", "serde"] }
 rand = "0.9.2"
