--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive
 chrono = { version = "0.4.41", features = ["now", "serde"] }
 rand = "0.9.2"
 rust_decimal = { version = "1.36.0", features = ["serde"] }
+dotenv = {version = "0.15.0"}
 # JWT and authentication dependencies
 jsonwebtoken = "9.3.0"
 bcrypt = "0.17.0"
