--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "publish": "pwp -H 192.168.21.209 -u administrator -a C:\\Users\\drew.chase\\.ssh\\mss-sshkey_ossh.key -s storeorders --binary store_orders -BIStc \"npm run build\""
   },
   "dependencies": {
-    "@heroui/react": "2.7.11",
+    "@heroui/react": "2.8.3",
     "@iconify-icon/react": "2.3.0",
     "framer-motion": "12.19.2",
     "react": "18.2.0",
     "react-cropper": "^2.3.3",
     "react-dom": "18.2.0",
-    "react-router-dom": "7.1.3"
+    "react-router-dom": "7.1.3",
+    "@internationalized/date": "^3.9.0",
+    "@react-aria/i18n": "^3.12.12"
   },
   "devDependencies": {
     "@types/react": "19.0.8",
