--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ include_dir = "0.7.4"
 walkdir = "2.5.0"
 log = "0.4.22"
 anyhow = "1.0.95"
-vite-actix = {version = "0.2.6"}
+vite-actix = { version = "0.2.6" }
 sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive", "runtime-tokio", "chrono", "rust_decimal"] }
 chrono = { version = "0.4.41", features = ["now", "serde"] }
 rand = "0.9.2"
@@ -40,6 +40,8 @@ lettre = { version = "0.11", default-features = false, features = ["tokio1-nativ
 database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }
 tokio = "1.46.0"
 uuid = { version = "1.17.0", features = ["v4"] }
+
+tera = { version = "1.20.0", features = [] }
 
 
 [build-dependencies]
