--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,6 @@
+[workspace]
+members = ["tools/filemaker_import_tool"]
+
 [package]
 name = "store_orders"
 version = "0.1.4"
@@ -40,7 +43,6 @@ lettre = { version = "0.11", default-features = false, features = ["tokio1-nativ
 database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }
 tokio = "1.46.0"
 uuid = { version = "1.17.0", features = ["v4"] }
-
 tera = { version = "1.20.0", features = [] }
 
 
