--- a/tools/filemaker_import_tool/Cargo.toml
+++ b/tools/filemaker_import_tool/Cargo.toml
@@ -13,3 +13,4 @@ store_orders = {path = "../../"}
 serde = {version = "1.0.219", features = ["derive", "serde_derive"]}
 serde_json = "1.0.125"
 database-common-lib = { git = "https://github.com/Mardens-Inc/database-common-lib.git" }
+sqlx = { version = "0.8.6", features = ["mysql", "sqlx-mysql", "macros", "derive", "runtime-tokio", "chrono", "rust_decimal"] }
